# bython

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  HACKING.md  README.md  README_8md.html  about.html  about_8dox.html  annotated.html  ast_2bases_8hpp.html  ast_2expression_8cpp.html  ast_2expression_8hpp.html  ast_2module_8hpp.html  ast_2statement_8cpp.html  ast_2statement_8hpp.html  ast_8hpp.html  bases_8cpp.html  codecov.yml  compound_8cpp.html  compound_8hpp.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_a56640a47bac4614c0a466fba7ac81bf.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_cebbd9a4b22c12daba90bfcc0c8873a2.html  dir_dc71ec0beda03a243b63ed88e3e52089.html  dir_e45ba254f01572472d631faac5cf9601.html  dir_ef3b2545113449f8f25e623a543d64e3.html  dir_f92bcd5274472b9900d4291e641ea020.html  dir_fa8be97a9358bd8e4e729d8495661fbb.html  entrypoints_8cpp.html  entrypoints_8hpp.html  files.html  index.html  inner__stmt_8hpp.html  install.sh  lib_8cpp.html  main_8cpp.html  (+95 more)
.devcontainer/: devcontainer.json
.github/workflows/: bython.yml  ci.yml  codeql.yml  converage.yml  docs.yml  images.yml  lint.yml  llvm.yml  sanitize.yml  test.yml
.github/workflows/images/: catch.yml  devcontainer.yml
cmake/: dev-mode.cmake  install-rules.cmake  lint.cmake  variables.cmake
docker/: Catch  Devcontainer  Dockerfile  LLVM  base.dockerfile  ci.dockerfile  dev.dockerfile
examples/: fib.by
source/: CMakeLists.txt  jit.cpp  main.cpp  repl.cpp
source/bython/: ast.hpp  lib.cpp  matchers.hpp  matching.hpp  parser.hpp  type_system.hpp  visitation.hpp
source/bython/ast/: CMakeLists.txt  bases.cpp  bases.hpp  compound.cpp  compound.hpp  expression.cpp  expression.hpp  module.cpp  module.hpp  operators.cpp  operators.hpp  statement.cpp  statement.hpp  tags.cpp  tags.hpp  visitor.hpp
source/bython/backend/: CMakeLists.txt  builtin.cpp  builtin.hpp  context.hpp  intrinsic.cpp  intrinsic.hpp  llvm.cpp  llvm.hpp  stack.cpp  stack.hpp  symbols.cpp  symbols.hpp  type_system.hpp  typing.cpp  typing.hpp
source/bython/codegen/: CMakeLists.txt  bases.hpp  builtin.cpp  builtin.hpp  executors.cpp  executors.hpp  intrinsic.cpp  intrinsic.hpp  llvm.cpp  llvm.hpp  stdin.cpp  stdin.hpp  symbols.cpp  symbols.hpp  translation_unit.cpp  translation_unit.hpp  type_system.cpp  type_system.hpp
source/bython/executors/: CMakeLists.txt  interpreter.cpp  interpreter.hpp  jit.cpp  jit.hpp
source/bython/frontend/: CMakeLists.txt  frontend.cpp  frontend.hpp  lexy.cpp  lexy.hpp
source/bython/frontend/lexy/: grammar.hpp  grammar2.hpp  top_level_grammar.hpp
source/bython/llvm_backend/: CMakeLists.txt  builtin.cpp  context.hpp  llvm.cpp  symbols.cpp  type_system.cpp
source/bython/matching/: CMakeLists.txt  bases.cpp  bases.hpp  expression.cpp  expression.hpp  operators.cpp  operators.hpp  special.cpp  special.hpp  statement.cpp  statement.hpp
source/bython/parser/: CMakeLists.txt  entrypoints.cpp  entrypoints.hpp  grammar.hpp  top_level_grammar.hpp
source/bython/parser/internal/: expression.hpp  inner_stmt.hpp  module.hpp  outer_stmt.hpp  primitives.hpp
source/bython/type_system/: CMakeLists.txt  builtin.cpp  builtin.hpp  environment.cpp  environment.hpp  inference.cpp  inference.hpp  subtyping.cpp  subtyping.hpp
source/bython/visitation/: CMakeLists.txt  ast.hpp  transformer.hpp  visitor.cpp  visitor.hpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/backend/binary_expression/: bitand.by  bitor.by  bitshift_left.by  bitshift_right.by  bitxor.by  booland.by  boolor.by  minus.by  modulo.by  plus.by  pow.by
test/backend/bitops/: bitand.by  bitand.by.stdout  bitor.by  bitor.by.stdout  bitshift_left.by  bitshift_left.by.stdout  bitshift_right.by  bitxor.by
test/backend/boolops/: booland.by  booland.by.stdout  boolor.by  boolor.by.stdout
test/backend/mathops/: minus.by  minus.by.stdout  modulo.by  modulo.by.stdout  plus.by  plus.by.stdout  pow.by  pow.by.stdout
test/backend/real-world/: fib.by  fib.stdout
test/codegen/: CMakeLists.txt  binary_expression.cpp  lit.cfg.py  lit.site.cfg.py.in
test/codegen/binary_expression/: addition.by  bitand.by  bitor.by  bitshift_left.by  bitshift_right.by  bitxor.by  booland.by  boolor.by  minus.by  modulo.by  plus.by  pow.by  subtraction.by
test/frontend/lexy/: string_frontend.cpp
test/lexy_frontend/: expression.cpp  inner_stmt.cpp  outer_stmt.cpp  unwrap.hpp  whitespace.cpp
test/llvm_backend/: lit.cfg.py
test/llvm_backend/binary_expression/: bitor.by  booland.by  boolor.by  pow.by
test/llvm_backend/real-world/: fib.by
test/matching/: CMakeLists.txt  special.cpp
test/parser/: CMakeLists.txt  expression.cpp  inner_stmt.cpp  outer_stmt.cpp  unwrap.hpp  whitespace.cpp
test/type_system/: inference.cpp  subtyping.cpp
test/utils/: CMakeLists.txt
test/utils/stringmaker/: CMakeLists.txt  type.cpp  type.hpp
test/visitation/: CMakeLists.txt  ast.cpp
